<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jakedawkins.notes.ViewNoteActivity"
    tools:showIn="@layout/activity_view_note">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/viewNoteScrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/viewNoteIconImageView"
                android:src="@drawable/note" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/zero"
                android:id="@+id/viewNoteCharacterCount"
                android:layout_gravity="right"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/textContent"
                android:ems="10"
                android:id="@+id/viewNoteTextContent"
                android:maxLength="256"
                android:hint="@string/textEntry" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/viewNoteImage"
                android:layout_gravity="center"
                android:maxHeight="150dp"
                android:adjustViewBounds="true"
                android:layout_marginTop="10dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:id="@+id/viewNoteDeleteButton"
                android:onClick="deletePressed"
                android:layout_marginTop="10dp"
                android:background="#ad0000"
                android:textColor="#f5f5f5" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:id="@+id/viewNoteEditButton"
                android:onClick="toEditActivity"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:textColor="#ffffff" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
